@@ -1292,6 +1292,141 @@ return|return
 name|result
 return|;
 block|}
+DECL|method|getAndPrepShardHandler
+specifier|private
+name|ShardHandler
+name|getAndPrepShardHandler
+parameter_list|(
+name|SolrQueryRequest
+name|req
+parameter_list|,
+name|ResponseBuilder
+name|rb
+parameter_list|)
+block|{
+name|ShardHandler
+name|shardHandler
+init|=
+literal|null
+decl_stmt|;
+name|rb
+operator|.
+name|isDistrib
+operator|=
+name|req
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|getBool
+argument_list|(
+literal|"distrib"
+argument_list|,
+name|req
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getCoreDescriptor
+argument_list|()
+operator|.
+name|getCoreContainer
+argument_list|()
+operator|.
+name|isZooKeeperAware
+argument_list|()
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|rb
+operator|.
+name|isDistrib
+condition|)
+block|{
+comment|// for back compat, a shards param with URLs like localhost:8983/solr will mean that this
+comment|// search is distributed.
+specifier|final
+name|String
+name|shards
+init|=
+name|req
+operator|.
+name|getParams
+argument_list|()
+operator|.
+name|get
+argument_list|(
+name|ShardParams
+operator|.
+name|SHARDS
+argument_list|)
+decl_stmt|;
+name|rb
+operator|.
+name|isDistrib
+operator|=
+operator|(
+operator|(
+name|shards
+operator|!=
+literal|null
+operator|)
+operator|&&
+operator|(
+name|shards
+operator|.
+name|indexOf
+argument_list|(
+literal|'/'
+argument_list|)
+operator|>
+literal|0
+operator|)
+operator|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|rb
+operator|.
+name|isDistrib
+condition|)
+block|{
+name|shardHandler
+operator|=
+name|shardHandlerFactory
+operator|.
+name|getShardHandler
+argument_list|()
+expr_stmt|;
+name|shardHandler
+operator|.
+name|prepDistributed
+argument_list|(
+name|rb
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|rb
+operator|.
+name|isDistrib
+condition|)
+block|{
+name|shardHandler
+operator|=
+literal|null
+expr_stmt|;
+comment|// request is not distributed after all and so the shard handler is not needed
+block|}
+block|}
+return|return
+name|shardHandler
+return|;
+block|}
 annotation|@
 name|Override
 DECL|method|handleRequestBody
@@ -1417,21 +1552,18 @@ argument_list|()
 else|:
 literal|null
 decl_stmt|;
+specifier|final
 name|ShardHandler
 name|shardHandler1
 init|=
-name|shardHandlerFactory
-operator|.
-name|getShardHandler
-argument_list|()
-decl_stmt|;
-name|shardHandler1
-operator|.
-name|checkDistributed
+name|getAndPrepShardHandler
 argument_list|(
+name|req
+argument_list|,
 name|rb
 argument_list|)
-expr_stmt|;
+decl_stmt|;
+comment|// creates a ShardHandler object only if it's needed
 if|if
 condition|(
 name|timer
@@ -1958,8 +2090,15 @@ operator|=
 operator|new
 name|ArrayList
 argument_list|<>
-argument_list|()
+argument_list|(
+name|sreq
+operator|.
+name|actualShards
+operator|.
+name|length
+argument_list|)
 expr_stmt|;
+comment|// presume we'll get a response from each shard we send to
 comment|// TODO: map from shard to address[]
 for|for
 control|(
